--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-- Implemenatere dns_server.py
+- Inserire partenza subprocess dns_server all'inizio del main (entrambi)
+- modificare la cattura di indirizzi (da record A a record A?)
 - Rimuovere gli output delle richieste
