--- a/TODO
+++ b/TODO
@@ -1,4 +1,16 @@
-- Cambiare e testare la risoluzione dei dns usando gli ip del DNS_server (usare 2 macchine virtuali)
-- Identificare automaticamente l'ip di provebienza delle richieste
-- Eventualmente modificare la cattura di indirizzi (da record A a record A?)
-- Rimuovere gli output delle richieste
+- Fixxare: Something wrong happend during the connection: [WinError 2] The system cannot find the file specified: 'cloaked.payload' sul receiver
+
+- Inviare come ultimo dominio un dominio accordato tra uno di quelli della lista dei domini attravreso l'algoritmo di clokify.
+a alla fine inviare un numero random di richieste in modo da confondere. (comunicarlo prima anche questo in modo che sa quante richieste scartare).
+
+- mettere ritrasmissione se non arriva niente dopo 3s 
+
+- per la ritrasmissione inserire nella lista di caratteri un carattere in più dedicato alla ritrasmisisone.
+
+Protocollo ritrasmissione:
+Per la ritrasmissione inviare l'ultimo carattere ricevuto così sa quale reinviare.
+
+vedi cap 6: https://link.springer.com/article/10.1007/s10207-024-00879-z
+
+- Lasciare la crittografia come opzionale
+
