--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 
-- Aggiungere sul file dns_server.py la chiamata alla funzione di ritrasmissione
+- Aggiungere sul file dns_server.py la chiamata alla funzione di ritrasmissione (si lavora sul dns_server del sender)
 
 - Inviare come ultimo dominio un dominio accordato tra uno di quelli della lista dei domini attravreso l'algoritmo di clokify.
 -> Non prende un dominio dalla lista ma se ne sceglie uno comune (con il flag --EOT_url), sennò lo scambierebbe come fine trasmissione se fosse una lettera
